log
vi., 22 de abr. de 2022  7:41:43: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
a72a69e
vi., 22 de abr. de 2022  7:49:20: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
101fd35
vi., 22 de abr. de 2022  7:49:27: 
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
077bbf6
vi., 22 de abr. de 2022  7:52:52: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|8
total_score: 0/70
7d332d1
vi., 22 de abr. de 2022  7:54:02: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
fb815e8
vi., 22 de abr. de 2022 10:08:02: 
 treemap.c | 74 +++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 46 insertions(+), 28 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:81:19: error: statement with no effect [-Werror=unused-value]
     tree->current == tree->root;
     ~~~~~~~~~~~~~~^~~~~~~~~~~~~
treemap.c:83:76: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         if (is_equal(tree, key, tree->current->pair->key) == 1) return tree->current;
                                                                        ~~~~^~~~~~~~~
treemap.c:86:17: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
             if (lower_than(tree->current->pair->key, key) == 1){
                 ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9de2025
vi., 22 de abr. de 2022 10:08:24: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:83:76: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         if (is_equal(tree, key, tree->current->pair->key) == 1) return tree->current;
                                                                        ~~~~^~~~~~~~~
treemap.c:86:17: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
             if (lower_than(tree->current->pair->key, key) == 1){
                 ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
45fc1ff
vi., 22 de abr. de 2022 10:14:48: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
6e77783
vi., 22 de abr. de 2022 11:28:48: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
92e858f
vi., 22 de abr. de 2022 11:46:45: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
f45bc2c
vi., 22 de abr. de 2022 11:49:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
de8a760
vi., 22 de abr. de 2022 12:07:04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
975553f
do., 24 de abr. de 2022 10:47:29: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
bbbdcd2
do., 24 de abr. de 2022 10:52:32: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:84:30: error: format '%d' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
             printf("--------%d_---------",tree->current->pair->key);
                              ^
cc1.exe: all warnings being treated as errors
Compilation failed
a0e4a42
do., 24 de abr. de 2022 11:00:28: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:59:13: error: too few arguments to function 'is_equal'
         if (is_equal(key, tree->current->pair->key) == 1) return;
             ^~~~~~~~
treemap.c:23:5: note: declared here
 int is_equal(TreeMap *tree, void *key1, void *key2)
     ^~~~~~~~
Compilation failed
6208a7d
do., 24 de abr. de 2022 11:01:37: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
63eef14
do., 24 de abr. de 2022 11:12:42: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 5/70
a1ca3b4
do., 24 de abr. de 2022 11:28:16: 
 treemap.c | 36 ++++++++++++++++++++++++------------
 1 file changed, 24 insertions(+), 12 deletions(-)
 tests:  10|6
total_score: 5/70
61fa222
do., 24 de abr. de 2022 15:36:12: 
 treemap.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
 tests:  10|6
total_score: 5/70
d1a01cf
